// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home-logo custom 1`] = `
"<div  class=\\"home-logo home-logo_custom_yes\\"><a class=\\"home-link home-logo__link home-logo__link_custom\\" href=\\"https://alice.yandex.ru\\" target=\\"_blank\\" rel=\\"noopener\\" data-statlog=\\"logo.alice_bday2018\\"><div  class=\\"home-logo__default\\" role=\\"img\\" aria-label=\\"Яндекс\\"></div><div class='home-logo__custom'><img  aria-label=\\"1 год Алисе\\" src=\\"//yastatic.net/s3/home/logos/citylogos/alice_bday2018/ru.png\\" style=\\"height:100px;width:140px\\" title=\\"1 год Алисе\\"><script  >(function () {
    /* currentScript не работает в ие */
    var script = document.currentScript;
    if (!script) {
        script = document.getElementsByTagName('script');
        script = script[script.length - 1];
    }
    var img = script.previousSibling;
    while (img && img.tagName !== 'IMG') {
        img = img.previousSibling;
    }
    function onerror () {
        var parent = img.parentNode;
        var customClass = ' home-logo_custom_yes';

        while (parent && parent.className.indexOf(customClass) === -1) {
            parent = parent.parentNode;
        }

        parent.className = parent.className.replace(customClass, '');
    }
    if (img) {
        /* Нельзя проверять height,
         * т.к. в ие он будет равен height из css.
         * complete и naturalHeight есть не во всех браузерах
         */
        if (img.complete && img.naturalHeight === 0) {
            onerror();
        } else {
            /* оптимистично надеемся, что картинка не успела загрузиться */
            img.onerror = onerror;
        }
    }
}());
</script></div></a></div>"
`;

exports[`home-logo custom-offsets 1`] = `
"<div  class=\\"home-logo home-logo_custom_yes\\"><a class=\\"home-link home-logo__link home-logo__link_custom\\" href=\\"https://alice.yandex.ru\\" target=\\"_blank\\" rel=\\"noopener\\" data-statlog=\\"logo.alice_bday2018\\"><div  class=\\"home-logo__default\\" role=\\"img\\" aria-label=\\"Яндекс\\"></div><div class='home-logo__custom'><img  aria-label=\\"1 год Алисе\\" src=\\"//yastatic.net/s3/home/logos/citylogos/alice_bday2018/ru.png\\" style=\\"height:100px;width:140px;margin-left:-10px;margin-top:-20px\\" title=\\"1 год Алисе\\"><script  >(function () {
    /* currentScript не работает в ие */
    var script = document.currentScript;
    if (!script) {
        script = document.getElementsByTagName('script');
        script = script[script.length - 1];
    }
    var img = script.previousSibling;
    while (img && img.tagName !== 'IMG') {
        img = img.previousSibling;
    }
    function onerror () {
        var parent = img.parentNode;
        var customClass = ' home-logo_custom_yes';

        while (parent && parent.className.indexOf(customClass) === -1) {
            parent = parent.parentNode;
        }

        parent.className = parent.className.replace(customClass, '');
    }
    if (img) {
        /* Нельзя проверять height,
         * т.к. в ие он будет равен height из css.
         * complete и naturalHeight есть не во всех браузерах
         */
        if (img.complete && img.naturalHeight === 0) {
            onerror();
        } else {
            /* оптимистично надеемся, что картинка не успела загрузиться */
            img.onerror = onerror;
        }
    }
}());
</script></div></a></div>"
`;

exports[`home-logo default 1`] = `"<div  class=\\"home-logo\\"><a class=\\"home-link home-logo__link\\" href=\\"https://yandex.ru\\" target=\\"_self\\" data-statlog=\\"logo.default\\"><div  class=\\"home-logo__default\\" role=\\"img\\" aria-label=\\"Яндекс\\"></div></a></div>"`;
